--- a/.github/workflows/other-repos.yml
+++ b/.github/workflows/other-repos.yml
@@ -35,3 +35,16 @@ jobs:
 
           echo "Response Code: $RESPONSE"
           cat response.json
+
+       # goltv repo'sunda 'ana-domain.yml' workflow'unu tetiklemek için
+      - name: Trigger ana-domain.yml from efendikaptan
+        run: |
+          RESPONSE=$(curl -s -o response.json -w "%{http_code}" \
+            -X POST \
+            -H "Authorization: token ${{ secrets.MY_PAT }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            -d '{"ref": "main"}' \
+            https://api.github.com/repos/MDuymaz/efendikaptan/actions/workflows/ana-domain.yml/dispatches)
+
+          echo "Response Code: $RESPONSE"
+          cat response.json
