--- a/.github/workflows/m3u-birlestir.yml
+++ b/.github/workflows/m3u-birlestir.yml
@@ -30,7 +30,7 @@ jobs:
           python your_script_name.py  # Python kodunu çalıştır
 
       - name: Upload the merged M3U playlist
-        uses: actions/upload-artifact@v2  # Burada v2'nin güncel sürümünü kullanalım
+        uses: actions/upload-artifact@v3  # Son sürümü kullanıyoruz
         with:
           name: playlist
           path: playlist.m3u  # 'playlist.m3u' dosyasını artefakt olarak yükle
