--- a/.github/workflows/m3u-birlestir.yml
+++ b/.github/workflows/m3u-birlestir.yml
@@ -1,6 +1,8 @@
 name: M3U Dosya Birleştirici
 
 on:
+  schedule:
+    - cron: "15 */2 * * *"  # Her 2 saatte bir 15. dakikada çalışır
    workflow_dispatch:  # Manuel olarak çalıştırılabilir
 
 jobs:
